--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   mobx: ^2.5.0
   flutter_mobx: ^2.3.0
   google_fonts: ^6.3.2
+  flutter_colorpicker: ^1.1.0
+  animated_snack_bar: ^0.4.0
 
 dev_dependencies:
   flutter_test:
