--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   google_fonts: ^6.3.2
   flutter_colorpicker: ^1.1.0
   animated_snack_bar: ^0.4.0
+  flutter_slidable: ^4.0.3
+  brasil_fields: ^1.18.0
+  flutter_speed_dial: ^7.0.0
 
 dev_dependencies:
   flutter_test:
