insert/update/delete transaction

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_slidable: ^4.0.3
   brasil_fields: ^1.18.0
   flutter_speed_dial: ^7.0.0
+  dropdown_search: ^6.0.2
 
 dev_dependencies:
   flutter_test:
