finish setup page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   flutter_speed_dial: ^7.0.0
   dropdown_search: ^6.0.2
   flutter_native_splash: ^2.4.6
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
